# Log4Qt

./: .astylerc  .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  ChangeLog.md  Log4Qt.pro  Readme.md  Readme.txt  appveyor.yml  build.pri  cmake_uninstall.cmake.in  g++.pri  log4qt.pro  log4qt.qbs  log4qtlib.qbs  others.qbs  project-config.cmake.in
.github/workflows/: cmake-ubuntu.yml  main.yml
cmake/: Log4QtConfig.cmake.in  MacroEnsureOutOfSourceBuild.cmake  cmake_uninstall.cmake.in
deploy/include/: BasicConfigurator  BinaryFileAppender  BinaryLayout  BinaryLogStream  BinaryLogger  BinaryLoggingEvent  BinaryToTextLayout  BinaryWriterAppender  ColorConsoleAppender  ConsoleAppender  DailyFileAppender  DailyRollingFileAppender  DatabaseLayout  FileAppender  Hierarchy  Layout  Level  Log4Qt  Log4QtShared  LogStream  LoggerRepository  LoggingEvent  PatternLayout  PropertyConfigurator  RollingBinaryFileAppender  SignalAppender  SimpleLayout  SimpleTimeLayout  SystemlogAppender  TelnetAppender  WDCAppender  WriterAppender
doc/: Doxyfile.in
examples/: CMakeLists.txt  examples.pri  examples.pro  examples.qbs
examples/basic/: CMakeLists.txt  basic.pro  basic.qbs  loggerobject.cpp  loggerobject.h  loggerobjectprio.cpp  loggerobjectprio.h  loggerstatic.cpp  loggerstatic.h  main.cpp
examples/propertyconfigurator/: CMakeLists.txt  loggerobject.cpp  loggerobject.h  loggerobjectprio.cpp  loggerobjectprio.h  loggerstatic.cpp  loggerstatic.h  main.cpp  propertyconfigurator.exe.log4qt.properties  propertyconfigurator.pro  propertyconfigurator.qbs
include/log4qt/: Appender  Appenderskeleton  AsyncAppender  BinaryFileAppender  BinaryLayout  BinaryLogStream  BinaryLogger  BinaryLoggingEvent  BinaryToTextLayout  BinaryWriterAppender  DatabaseAppender  LogManager  MDC  MainthreadAppender  NDC  RollingBinaryFileAppender  RollingFileAppender  TTCCLayout  XMLLayout
src/: Log4Qt.pri  appender.cpp  appender.h  appenderskeleton.cpp  appenderskeleton.h  asyncappender.cpp  asyncappender.h  basicconfigurator.cpp  basicconfigurator.h  binaryclasslogger.cpp  binaryclasslogger.h  binaryfileappender.cpp  binaryfileappender.h  binarylayout.cpp  binarylayout.h  binarylogger.cpp  binarylogger.h  binaryloggingevent.cpp  binaryloggingevent.h  binarylogstream.cpp  binarylogstream.h  binarytotextlayout.cpp  binarytotextlayout.h  binarywriterappender.cpp  binarywriterappender.h  colorconsoleappender.cpp  colorconsoleappender.h  consoleappender.cpp  consoleappender.h  dailyfileappender.cpp  dailyfileappender.h  dailyrollingfileappender.cpp  dailyrollingfileappender.h  databaseappender.cpp  databaseappender.h  databaselayout.cpp  databaselayout.h  fileappender.cpp  fileappender.h  hierarchy.cpp  (+53 more)
src/helpers/: appenderattachable.cpp  appenderattachable.h  binaryclasslogger.cpp  binaryclasslogger.h  classlogger.cpp  classlogger.h  configuratorhelper.cpp  configuratorhelper.h  datetime.cpp  datetime.h  dispatcher.cpp  dispatcher.h  factory.cpp  factory.h  initialisationhelper.cpp  initialisationhelper.h  logerror.cpp  logerror.h  logobject.cpp  logobject.h  logobjectptr.cpp  logobjectptr.h  optionconverter.cpp  optionconverter.h  patternformatter.cpp  patternformatter.h  properties.cpp  properties.h
src/log4qt/: .gitignore  CMakeLists.txt  appender.cpp  appender.h  appenderskeleton.cpp  appenderskeleton.h  asyncappender.cpp  asyncappender.h  basicconfigurator.cpp  basicconfigurator.h  binaryfileappender.cpp  binaryfileappender.h  binarylayout.cpp  binarylayout.h  binarylogger.cpp  binarylogger.h  binaryloggingevent.cpp  binaryloggingevent.h  binarylogstream.cpp  binarylogstream.h  binarytotextlayout.cpp  binarytotextlayout.h  binarywriterappender.cpp  binarywriterappender.h  colorconsoleappender.cpp  colorconsoleappender.h  consoleappender.cpp  consoleappender.h  dailyfileappender.cpp  dailyfileappender.h  dailyrollingfileappender.cpp  dailyrollingfileappender.h  databaseappender.cpp  databaseappender.h  databaselayout.cpp  databaselayout.h  fileappender.cpp  fileappender.h  generated_header.pri  hierarchy.cpp  (+58 more)
src/log4qt/helpers/: appenderattachable.cpp  appenderattachable.h  binaryclasslogger.cpp  binaryclasslogger.h  classlogger.cpp  classlogger.h  configuratorhelper.cpp  configuratorhelper.h  datetime.cpp  datetime.h  dispatcher.cpp  dispatcher.h  factory.cpp  factory.h  initialisationhelper.cpp  initialisationhelper.h  logerror.cpp  logerror.h  optionconverter.cpp  optionconverter.h  patternformatter.cpp  patternformatter.h  properties.cpp  properties.h
src/log4qt/spi/: filter.cpp  filter.h
src/log4qt/varia/: binaryeventfilter.cpp  binaryeventfilter.h  debugappender.cpp  debugappender.h  denyallfilter.cpp  denyallfilter.h  levelmatchfilter.cpp  levelmatchfilter.h  levelrangefilter.cpp  levelrangefilter.h  listappender.cpp  listappender.h  nullappender.cpp  nullappender.h  stringmatchfilter.cpp  stringmatchfilter.h
src/spi/: filter.cpp  filter.h
src/varia/: binaryeventfilter.cpp  binaryeventfilter.h  debugappender.cpp  debugappender.h  denyallfilter.cpp  denyallfilter.h  levelmatchfilter.cpp  levelmatchfilter.h  levelrangefilter.cpp  levelrangefilter.h  listappender.cpp  listappender.h  nullappender.cpp  nullappender.h  stringmatchfilter.cpp  stringmatchfilter.h
tests/: CMakeLists.txt  tests.pri  tests.pro  tests.qbs
tests/binaryloggertest/: CMakeLists.txt  atscopeexit.h  binaryloggertest.cpp  binaryloggertest.pro  binaryloggertest.qbs  elementsinarray.h  logging.cpp  logging.h  testappender.cpp  testappender.h
tests/dailyfileappendertest/: CMakeLists.txt  dailyfileappendertest.cpp  dailyfileappendertest.pro  dailyfileappendertest.qbs
tests/filewatcher/: CMakeLists.txt  filewatcher.pro  tst_filewatchertest.cpp
tests/log4qttest/: CMakeLists.txt  log4qttest.cpp  log4qttest.h  log4qttest.pro  log4qttest.qbs
